# Internet_Store

./: 14.1_main.py  README.md  project_tree.py  pyproject.toml
data/: products.json
src/: category.py  product.py
tests/: conftest.py  test_category.py  test_product.py
